# NFL_Predict_Repo_INST414

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/matchups/: matchups_2022.csv  matchups_2023.csv  matchups_2024.csv  matchups_2025.csv  matchups_all_seasons.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: xgb_point_diff.pkl
my_project3/: __init__.py  config.py  dataset.py  features.py  plots.py
my_project3/data/: build_full_matchup_data.py  build_injury_adjustment_file.py  build_matchup_data.py  build_team_dataset.py  clean_team_stats.py  clean_team_stats_by_team.py  download_cbs_injury_report.py  download_odds.py  download_team_stats.py  feature_engineering_team.py  injury_adjust.py  nflfastr_build_advanced_stats.R  nflfastr_epa.py  team_ratings.py
my_project3/modeling/: predict.py  predict_today.py  train.py  tune_xgb.py
nfl_prediction/: __init__.py
nfl_prediction/data/: build_full_matchup_data.py  build_injury_adjustment_file.py  build_matchup_data.py  clean_team_stats.py  download_odds.py  (+8 more)
notebooks/: Data_Analysis_NFL_Matchups.ipynb  baseline_model.ipynb  cbs_injury_report.ipynb  feature_importance.ipynb  feature_selection.ipynb  model_2025_predict_check.ipynb  model_comparison.ipynb  multivariate_analysis.ipynb  regression_diagnostics.ipynb  univariate_analysis.ipynb  verify_odds.ipynb
reports/: predictions_test_2023.csv  predictions_test_2024.csv  predictions_test_2025.csv  predictions_train_2023.csv  predictions_train_2024.csv  predictions_train_2025.csv  variable_inventory.csv  variable_inventory.py
(+878 files in other folders)
